# video-transcription-app

./: .gitignore  README.md  pyproject.toml
auth/: admin.py  api.py
core/: api.py  settings.py  urls.py
evaluate/: cli.py  evaluator.py
evaluate/datasets/: __init__.py  base.py  callhome.py  common_voice.py
evaluate/metrics/: __init__.py  calculator.py
evaluate/services/: __init__.py  transcription_service.py
transcription/: admin.py  api.py  models.py  schemas.py  tasks.py
transcription-frontend/: package-lock.json  package.json
transcription-frontend/src/: App.tsx
transcription-frontend/src/components/: AudioPlayer.tsx  FileUpload.tsx  MediaHistory.tsx  MediaPlayer.tsx  ProcessingJobs.tsx  SummaryPanel.tsx  SummaryPanelHeader.tsx  TranscriptPanel.tsx  VideoPlayer.tsx  YouTubePlayer.tsx
transcription-frontend/src/contexts/: AuthContext.tsx
transcription-frontend/src/layouts/: AudioLayout.tsx  VideoLayout.tsx
transcription-frontend/src/lib/: api.ts  csrfToken.ts  languages.ts  services.ts  utils.ts
transcription-frontend/src/pages/: HistoryPage.tsx  LoginPage.tsx  RegisterPage.tsx  UploadPage.tsx  ViewPage.tsx
transcription-frontend/src/types/: segment.ts  summary.ts  youtube.d.ts
transcription/migrations/: 0001_initial.py  0002_mediafile_google_uri_mediafile_user.py  0003_summary.py  0004_transcription_error_message_transcription_status_and_more.py  0005_update_existing_transcriptions_to_completed.py  0006_transcription_task_id.py
transcription/services/: __init__.py  elevenlabs.py  google_gemini.py  transcription.py  whisperx.py  youtube.py
(+1 files in other folders)
