[project]
name = "graduation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.4",
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "django-ninja>=1.3.0",
    "django-storages>=1.14.5",
    "elevenlabs>=1.52.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "google-genai>=1.5.0",
    "markupsafe==2.1.5",
    "psycopg2>=2.9.10",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "pytubefix>=8.12.2",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "whisperx>=3.3.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
